      is blocked and the exception will be reiterated on the 
      next compile() call.  This issue occurs frequently
      when using declarative.

    - property.of_type() is now recognized on a single-table
      inheriting target, when used in the context of 
      prop.of_type(..).any()/has(), as well as 
      query.join(prop.of_type(...)).
      
    - Fixed bug when using weak_instance_map=False where modified
      events would not be intercepted for a flush(). [ticket:1272]
      
    - Fixed some deep "column correspondence" issues which could
      impact a Query made against a selectable containing
      multiple versions of the same table, as well as 
      unions and similar which contained the same table columns
      in different column positions at different levels.
      [ticket:1268]
      
    - Custom comparator classes used in conjunction with 
      column_property(), relation() etc. can define 
      new comparison methods on the Comparator, which will
      become available via __getattr__() on the 
      InstrumentedAttribute.   In the case of synonym()
      or comparable_property(), attributes are resolved first
      on the user-defined descriptor, then on the user-defined
      comparator.
      
    - Added ScopedSession.is_active accessor. [ticket:976]
    
    - Can pass mapped attributes and column objects as keys
      to query.update({}).  [ticket:1262]
      
    - Mapped attributes passed to the values() of an 
      expression level insert() or update() will use the 
      keys of the mapped columns, not that of the mapped 
      attribute.
      
    - Corrected problem with Query.delete() and
      Query.update() not working properly with bind 
      parameters. [ticket:1242]

    - Query.select_from(), from_statement() ensure
      that the given argument is a FromClause,
      or Text/Select/Union, respectively.

    - Query() can be passed a "composite" attribute
      as a column expression and it will be expanded.